tests/negative/runtime/arrayremove_empty/input.ci
void main() {
    int[] xs = [];
    arrayRemove(xs, 0);
}
